[tool.poetry]
name = "olb-server"
version = "0.1.0"
description = ""
authors = ["joel <joel.vanegmond@ucalgary.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-restx = "^0.2.0"
Flask-JWT-Extended = "^3.24.1"
passlib = "^1.7.2"
Flask-SQLAlchemy = "^2.4.4"
Flask = "^1.1.2"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
